# catch2-issue-2255

./: .gitignore  CMakeLists.txt  README.md  test.cpp
